--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
   "name": "ngtube",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "license": "MIT",
+  "contributors": [
+	  { 
+	  	"name": "Gatien Bovyn",
+	  	"email": "gatien.bovyn@gmail.com"
+	  },
+	  { 
+	  	"name": "Florian Knop",
+	  	"email": "florian_knop@hotmail.com"
+	  },
+	  { 
+	  	"name": "Simon Placentino",
+	  	"email": "placentino.simon@gmail.com"
+	  }
+  ],
   "angular-cli": {},
   "scripts": {
     "start": "ng server",
@@ -20,6 +34,7 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
+    "@ngrx/store": "github:ngrx/store",
     "es6-shim": "^0.35.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
