--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.0.1",
   "license": "MIT",
   "contributors": [
-	  { 
-	  	"name": "Gatien Bovyn",
-	  	"email": "gatien.bovyn@gmail.com"
-	  },
-	  { 
-	  	"name": "Florian Knop",
-	  	"email": "florian_knop@hotmail.com"
-	  },
-	  { 
-	  	"name": "Simon Placentino",
-	  	"email": "placentino.simon@gmail.com"
-	  }
+    {
+      "name": "Gatien Bovyn",
+      "email": "gatien.bovyn@gmail.com"
+    },
+    {
+      "name": "Florian Knop",
+      "email": "florian_knop@hotmail.com"
+    },
+    {
+      "name": "Simon Placentino",
+      "email": "placentino.simon@gmail.com"
+    }
   ],
   "angular-cli": {},
   "scripts": {
@@ -37,6 +37,7 @@
     "@angular/router": "2.0.0-rc.1",
     "@ngrx/store": "^1.5.0",
     "es6-shim": "^0.35.0",
+    "moment": "^2.13.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
