--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "format": "clang-format -i -style=file --glob=src/**/*.ts",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "deploy": "surge ./dist"
+    "deploy": "cp CNAME dist/CNAME && surge ./dist"
   },
   "private": true,
   "dependencies": {
