--- a/package.json
+++ b/package.json
@@ -48,12 +48,18 @@
     "clang-format": "^1.0.35",
     "codelyzer": "0.0.14",
     "ember-cli-inject-live-reload": "^1.4.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-inline-ng2-template": "^1.1.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-typescript": "^2.13.4",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
     "protractor": "^3.3.0",
+    "systemjs-builder": "^0.15.16",
     "ts-node": "^0.5.5",
     "tslint": "^3.6.0",
     "typescript": "^1.8.10",
