--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
         "**/.DS_Store": true,
         "**/dist": true,
         "**/node_modules": true,
-        "**/tmp": true
+        "**/tmp": true,
+        "**/tmp-gulp": true,
+        "**/dist-gulp": true
     }
 }
